{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 1174,
  "lineage": "138946a6-24bd-465a-3839-33a54f3632ea",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:744445457753:loadbalancer/app/tf-lb-20240228135611600000000005/4f5bb5b7902d6ea5",
            "arn_suffix": "app/tf-lb-20240228135611600000000005/4f5bb5b7902d6ea5",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240228135611600000000005-444350078.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:744445457753:loadbalancer/app/tf-lb-20240228135611600000000005/4f5bb5b7902d6ea5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20240228135611600000000005",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-048bdd20e61ee7a1b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07f864bcd1a6094dc"
              },
              {
                "subnet_id": "subnet-0c970978daf6bc9af"
              }
            ],
            "subnets": [
              "subnet-07f864bcd1a6094dc",
              "subnet-0c970978daf6bc9af"
            ],
            "tags": {
              "Name": "Staging environment  application load balancer"
            },
            "tags_all": {
              "Name": "Staging environment  application load balancer"
            },
            "vpc_id": "vpc-0a14970ae1cd7123d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc_subnets.module.staging_vpc.aws_subnet.private-subnets",
            "module.vpc_subnets.module.staging_vpc.aws_subnet.public-subnets",
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc",
            "module.vpc_subnets.module.staging_vpc.data.aws_subnets.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:744445457753:listener/app/tf-lb-20240228135611600000000005/4f5bb5b7902d6ea5/1b1e505c5543e2e4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:744445457753:targetgroup/tf-20240228135600752200000003/37571258e26133c4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:744445457753:listener/app/tf-lb-20240228135611600000000005/4f5bb5b7902d6ea5/1b1e505c5543e2e4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:744445457753:loadbalancer/app/tf-lb-20240228135611600000000005/4f5bb5b7902d6ea5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instances.aws_lb.app_alb",
            "module.instances.aws_lb_target_group.app_lb_target_group",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc_subnets.module.staging_vpc.aws_subnet.private-subnets",
            "module.vpc_subnets.module.staging_vpc.aws_subnet.public-subnets",
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc",
            "module.vpc_subnets.module.staging_vpc.data.aws_subnets.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:744445457753:targetgroup/tf-20240228135600752200000003/37571258e26133c4",
            "arn_suffix": "targetgroup/tf-20240228135600752200000003/37571258e26133c4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/login",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:744445457753:targetgroup/tf-20240228135600752200000003/37571258e26133c4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240228135600752200000003",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a14970ae1cd7123d"
          },
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:744445457753:security-group/sg-048bdd20e61ee7a1b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048bdd20e61ee7a1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240228135600504200000001",
            "name_prefix": "terraform-",
            "owner_id": "744445457753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Staging environment  security group for load balancer"
            },
            "tags_all": {
              "Name": "Staging environment  security group for load balancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a14970ae1cd7123d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:744445457753:security-group/sg-05e9a28f66f32bc8a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e9a28f66f32bc8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240228135601007700000004",
            "name_prefix": "terraform-",
            "owner_id": "744445457753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Staging environment  security group for MySQL database"
            },
            "tags_all": {
              "Name": "Staging environment  security group for MySQL database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a14970ae1cd7123d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:744445457753:security-group/sg-0814dcaf0bbbc9af3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0814dcaf0bbbc9af3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240228135600505900000002",
            "name_prefix": "terraform-",
            "owner_id": "744445457753",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Staging environment  security group for ECS"
            },
            "tags_all": {
              "Name": "Staging environment  security group for ECS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a14970ae1cd7123d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets.module.staging_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "own-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:744445457753:internet-gateway/igw-0bc8568411f64a12b",
            "id": "igw-0bc8568411f64a12b",
            "owner_id": "744445457753",
            "tags": {
              "Name": "Staging environment  internet gateway"
            },
            "tags_all": {
              "Name": "Staging environment  internet gateway"
            },
            "vpc_id": "vpc-0a14970ae1cd7123d"
          },
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets.module.staging_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "own_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:744445457753:route-table/rtb-04828b429adf4d13d",
            "id": "rtb-04828b429adf4d13d",
            "owner_id": "744445457753",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc8568411f64a12b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Staging environment  route table "
            },
            "tags_all": {
              "Name": "Staging environment  route table "
            },
            "timeouts": null,
            "vpc_id": "vpc-0a14970ae1cd7123d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_internet_gateway.own-gw",
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets.module.staging_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "own_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019ace386254e0e61",
            "route_table_id": "rtb-04828b429adf4d13d",
            "subnet_id": "subnet-0c970978daf6bc9af"
          },
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_internet_gateway.own-gw",
            "module.vpc_subnets.module.staging_vpc.aws_route_table.own_route_table",
            "module.vpc_subnets.module.staging_vpc.aws_subnet.private-subnets",
            "module.vpc_subnets.module.staging_vpc.aws_subnet.public-subnets",
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c85110fe7b5bb11",
            "route_table_id": "rtb-04828b429adf4d13d",
            "subnet_id": "subnet-07f864bcd1a6094dc"
          },
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_internet_gateway.own-gw",
            "module.vpc_subnets.module.staging_vpc.aws_route_table.own_route_table",
            "module.vpc_subnets.module.staging_vpc.aws_subnet.private-subnets",
            "module.vpc_subnets.module.staging_vpc.aws_subnet.public-subnets",
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets.module.staging_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:744445457753:subnet/subnet-09616fdfeea27ae9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "15.85.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09616fdfeea27ae9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744445457753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Staging environment  private subnet  0",
              "filter_id": "Private_Subnet"
            },
            "tags_all": {
              "Name": "Staging environment  private subnet  0",
              "filter_id": "Private_Subnet"
            },
            "vpc_id": "vpc-0a14970ae1cd7123d"
          },
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:744445457753:subnet/subnet-06f64cd5e6dcbcd49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "15.85.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f64cd5e6dcbcd49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "744445457753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Staging environment  private subnet  1",
              "filter_id": "Private_Subnet"
            },
            "tags_all": {
              "Name": "Staging environment  private subnet  1",
              "filter_id": "Private_Subnet"
            },
            "vpc_id": "vpc-0a14970ae1cd7123d"
          },
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets.module.staging_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:744445457753:subnet/subnet-0c970978daf6bc9af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "15.85.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c970978daf6bc9af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "744445457753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Staging environment  public subnet  0",
              "filter_id": "Public_Subnet"
            },
            "tags_all": {
              "Name": "Staging environment  public subnet  0",
              "filter_id": "Public_Subnet"
            },
            "vpc_id": "vpc-0a14970ae1cd7123d"
          },
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:744445457753:subnet/subnet-07f864bcd1a6094dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "15.85.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f864bcd1a6094dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "744445457753",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Staging environment  public subnet  1",
              "filter_id": "Public_Subnet"
            },
            "tags_all": {
              "Name": "Staging environment  public subnet  1",
              "filter_id": "Public_Subnet"
            },
            "vpc_id": "vpc-0a14970ae1cd7123d"
          },
          "dependencies": [
            "module.vpc_subnets.module.staging_vpc.aws_vpc.own_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_subnets.module.staging_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "own_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:744445457753:vpc/vpc-0a14970ae1cd7123d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "15.85.0.0/16",
            "default_network_acl_id": "acl-0e2c8a1bfac246c88",
            "default_route_table_id": "rtb-03f59d068acf357f7",
            "default_security_group_id": "sg-0ddd80a94b1de0201",
            "dhcp_options_id": "dopt-0dc37d1b01245a413",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a14970ae1cd7123d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f59d068acf357f7",
            "owner_id": "744445457753",
            "tags": {
              "Name": "Staging environment  VPC"
            },
            "tags_all": {
              "Name": "Staging environment  VPC"
            }
          }
        }
      ]
    }
  ]
}